Fix T83013: Annotation with hidden object in sculpt mode crashes

This just avoids the crash, the annotation tool still doesn't work.

Larger changes will be needed to resolve this, see T85532.